RESOLVED FIXED165283
Fix WinCairo build after r208997
https://bugs.webkit.org/show_bug.cgi?id=165283
Summary Fix WinCairo build after r208997
Alex Christensen
Reported 2016-12-01 15:19:36 PST
Fix WinCairo build after r208997
Attachments
Patch (1.13 KB, patch)
2016-12-01 15:22 PST, Alex Christensen
no flags
Alex Christensen
Comment 1 2016-12-01 15:22:42 PST
Carlos Garcia Campos
Comment 2 2016-12-01 23:57:36 PST
Comment on attachment 295905 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=295905&action=review Thanks! > Source/WebCore/platform/graphics/GLContext.cpp:32 > +#if USE(OPENGL_ES_2) > +#include <GLES2/gl2.h> > +#include <GLES3/gl3.h> > +#endif Is this still needed after bug #165253? Plan is to switch to glGetString(GL_VERSION). In any case, let's fix the build now, and we will remove this includes if they are not needed as part of #165253.
Alex Christensen
Comment 3 2016-12-01 23:59:17 PST
Comment on attachment 295905 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=295905&action=review >> Source/WebCore/platform/graphics/GLContext.cpp:32 >> +#endif > > Is this still needed after bug #165253? Plan is to switch to glGetString(GL_VERSION). In any case, let's fix the build now, and we will remove this includes if they are not needed as part of #165253. I think the include gl2 will be needed still.
WebKit Commit Bot
Comment 4 2016-12-02 00:24:30 PST
Comment on attachment 295905 [details] Patch Clearing flags on attachment: 295905 Committed r209233: <http://trac.webkit.org/changeset/209233>
WebKit Commit Bot
Comment 5 2016-12-02 00:24:34 PST
All reviewed patches have been landed. Closing bug.
Michael Catanzaro
Comment 6 2016-12-22 17:38:35 PST
But: #if USE(OPENGL_ES_2) #include <GLES2/gl2.h> #include <GLES3/gl3.h> #endif You are using a GLES3 header inside a GLES2 guard. I think we need to find a different guard to use instead.
Michael Catanzaro
Comment 7 2018-02-21 12:01:19 PST
(In reply to Michael Catanzaro from comment #6) > But: > > #if USE(OPENGL_ES_2) > #include <GLES2/gl2.h> > #include <GLES3/gl3.h> > #endif > > You are using a GLES3 header inside a GLES2 guard. I think we need to find a > different guard to use instead. See bug #183008.
Note You need to log in before you can comment on or make changes to this bug.