Fix WinCairo build after r208997 https://bugs.webkit.org/show_bug.cgi?id=165283

Patch by Alex Christensen <achristensen@webkit.org> on 2016-12-02
Reviewed by Carlos Garcia Campos.

* platform/graphics/GLContext.cpp:
glGetIntegerv is defined in gl2.h.
GL_MAJOR_VERSION is defined in gl3.h.
These are not included in the WinCairo build.

Canonical link: https://commits.webkit.org/182913@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@209233 268f45cc-cd09-0410-ab3c-d52691b4dbfc